# osiris-chat

./: .gitignore  LICENSE  README.md  debug-osiris.sh  get-status.sh  install-systemd.sh  pyproject.toml  requirements.txt  search-proxy.py  setup-venv.sh  start-all.sh  stop-all.sh
backend/: requirements.txt  search-proxy.py  search.py  weather.py  wikipedia.py
frontend/: app.js  chat.html  page.html
html/: osiris-chat.html  osiris-chat.html.bak  osiris-chat.html.new
minimal-example/: README.md  app.js  chat.html  start-all.sh  stop-all.sh
systemd/: osiris-http.service  search-mcp.service
